# kiln

./: .coveragerc  .gitignore  README.md  checks.sh  conftest.py  dev-requirements.txt  environment.yaml  environment.yml  pyrightconfig.json  pytest.ini  requirements.txt  start_env.sh
.github/workflows/: build_and_test.yml  build_desktop.yml  format_and_lint.yml  test_count.yml  web_format_lint_build.yml
app/desktop/: __init__.py  build_desktop_app.sh  desktop.py  desktop_server.py  test_desktop.py
app/web_ui/: .prettierignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js
app/web_ui/src/: app.html  config.ts
app/web_ui/src/lib/: api_client.ts  api_schema.d.ts  generate_schema.sh  stores.test.ts  stores.ts  types.ts
app/web_ui/src/lib/utils/: error_handlers.ts  form_container.svelte  form_element.svelte  form_list.svelte
app/web_ui/src/lib/utils/json_schema_editor/: json_schema_form_element.svelte  json_schema_templates.test.ts  json_schema_templates.ts
app/web_ui/src/routes/: +layout.svelte  +layout.ts
app/web_ui/src/routes/(app)/: +layout.svelte  +page.svelte  app_page.svelte  select_tasks_menu.svelte
app/web_ui/src/routes/(app)/create_project/: +page.svelte
app/web_ui/src/routes/(app)/create_task/: +page.svelte
app/web_ui/src/routes/(app)/dataset/: +page.svelte
app/web_ui/src/routes/(app)/dataset/[project_id]/[task_id]/: +page.svelte
app/web_ui/src/routes/(app)/dataset/run/[run_id]/: +page.svelte
app/web_ui/src/routes/(app)/examples/: +page.svelte
app/web_ui/src/routes/(app)/prompts/[project_id]/[task_id]/: +page.svelte
app/web_ui/src/routes/(app)/run/: +page.svelte  available_models_dropdown.svelte  output.svelte  prompt_type_selector.svelte  rating.svelte  run.svelte  run_input_form.svelte
app/web_ui/src/routes/(app)/select_task/: +page.svelte
app/web_ui/src/routes/(app)/settings/: +page.svelte
app/web_ui/src/routes/(app)/settings/create_project/: +page.svelte
app/web_ui/src/routes/(app)/settings/create_task/: +page.svelte
app/web_ui/src/routes/(app)/settings/create_task/[slug]/: +page.svelte
app/web_ui/src/routes/(app)/settings/edit_project/[slug]/: +page.svelte
app/web_ui/src/routes/(app)/settings/edit_task/: +page.svelte
app/web_ui/src/routes/(app)/settings/intro/: +page.svelte
app/web_ui/src/routes/(app)/settings/manage_projects/: +page.svelte
app/web_ui/src/routes/(app)/settings/providers/: +page.svelte
app/web_ui/src/routes/(fullscreen)/: +layout.svelte
app/web_ui/src/routes/(fullscreen)/setup/: +page.svelte
app/web_ui/src/routes/(fullscreen)/setup/(setup)/: +layout.svelte
app/web_ui/src/routes/(fullscreen)/setup/(setup)/connect_providers/: +page.svelte  connect_providers.svelte
app/web_ui/src/routes/(fullscreen)/setup/(setup)/create_project/: +page.svelte  edit_project.svelte  new_project.svelte
app/web_ui/src/routes/(fullscreen)/setup/(setup)/create_task/: +page.svelte  edit_task.svelte  schema_section.svelte  task_types.ts
app/web_ui/src/routes/(fullscreen)/setup/(setup)/intro/: +page.svelte  tutorial.svelte  tutorial_section.svelte
app/web_ui/src/routes/(fullscreen)/setup/(setup)/select_task/: +page.svelte
core/: README.md  pyproject.toml
core/tests/: test_example.py
desktop/: README.md  base.py  build_desktop_app.sh  desktop.py  run_desktop_dev.sh
libs/core/: README.md  pyproject.toml  setup.cfg
libs/core/kiln_ai/: __init.__.py  coreadd.py
libs/core/kiln_ai/adapters/: base_adapter.py  langchain_adapter.py  langchain_adapters.py  ml_model_list.py  prompt_adapters.py  prompt_builders.py  test_langchain.py  test_langchain_adapter.py  test_ml_model_list.py  test_prompt_adaptors.py  test_prompt_builders.py  test_saving_adapter_results.py  test_structured_output.py
libs/core/kiln_ai/adapters/repair/: repair_task.py  test_repair_task.py
libs/core/kiln_ai/datamodel/: __init__.py  basemodel.py  json_schema.py  models.py  project.py  test_basemodel.py  test_datasource.py  test_example_models.py  test_json_schema.py  test_models.py  test_nested_save.py  test_output_rating.py  test_project.py
libs/core/kiln_ai/utils/: config.py  formatting.py  test_config.py
libs/core/tests/: test_project.py
libs/kiln_ai/: pyproject.toml
libs/kiln_ai/kilnai/: coreadd.py
libs/kiln_ai/tests/: test_project.py
libs/studio/: README.md  pyproject.toml
libs/studio/kiln_studio/: custom_errors.py  project_api.py  project_management.py  prompt_api.py  provider_api.py  provider_management.py  repair_api.py  run_api.py  server.py  settings.py  task_api.py  task_management.py  test_custom_error.py  test_project_api.py  test_project_management.py  test_prompt_api.py  test_provider_management.py  test_repair_api.py  test_run_api.py  test_server.py  test_settings.py  test_task_api.py  test_task_management.py  webhost.py
libs/studio/tests/: test_import.py
server/: dev.sh  main.py  server.py
server/studio/: index.html
src/core/: __about__.py  __init__.py  coreadd.py
src/desktop/: README.md  build_desktop_app.sh  desktop.py
src/studio/: LICENSE.txt  __about__.py  dev.sh  server.py
src/web_ui/: package.json
src/web_ui/src/routes/(app)/: +layout.svelte
studio/: pyproject.toml
studio/server/: dev.sh
studio/web_ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
studio/web_ui/src/: app.d.ts  config.ts
studio/web_ui/src/routes/: +layout.svelte
studio/web_ui/src/routes/(app)/: +layout.svelte  +page.svelte
(+3 files in other folders)
