[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiln_ai"
dynamic = ["version"]
description = 'Kiln AI'
readme = "README.md"
requires-python = ">=3.8"
license = {file = "../src/core/LICENSE.txt"}
keywords = []
authors = [
  { name = "Steve Cosman, Chesterfield Laboratories Inc", email = "scosman@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.build.targets.sdist.force-include]
"../src/core" = "src/core"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[project.urls]
Documentation = "https://github.com/Kiln-AI/kiln#readme"
Issues = "https://github.com/Kiln-AI/kiln/issues"
Source = "https://github.com/Kiln-AI/kiln"

[tool.hatch.version]
path = "../src/core/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kiln_ai tests}"

[tool.coverage.run]
source_pkgs = ["kiln_ai", "tests"]
branch = true
parallel = true
omit = [
  "src/kiln_ai/__about__.py",
]

[tool.coverage.paths]
kiln_ai = ["src/kiln_ai", "*/kiln-ai/src/kiln_ai"]
tests = ["tests", "*/kiln-ai/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
