[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiln_studio"
dynamic = ["version"]
description = 'Kiln Studio'
readme = "README.md"
requires-python = ">=3.8"
license = { file = "../src/studio/LICENSE.txt" }
keywords = []
authors = [
  { name = "scosman", email = "scosman@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.build.targets.sdist.force-include]
"../src/studio" = "src/studio"

[tool.hatch.build.targets.wheel]
packages = ["src/studio"]

[project.urls]
Documentation = "https://kiln-ai.com"
Issues = "https://github.com/Kiln-AI/kiln/issues"
Source = "https://github.com/Kiln-AI/kiln"
[tool.hatch.version]
path = "../src/studio/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/studio tests}"

[tool.coverage.run]
source_pkgs = ["studio", "tests"]
branch = true
parallel = true
omit = [
  "src/studio/__about__.py",
]

[tool.coverage.paths]
studio = ["src/studio", "*/studio/src/studio"]
tests = ["tests", "*/studio/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
