[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kiln_studio"
version = "0.0.1"
description = 'Kiln Studio'
authors = [
  "Steve Cosman, Chesterfield Laboratories Inc <scosman@users.noreply.github.com>",
]
license = "Proprietary"
homepage = "https://kiln-ai.com"
repository = "https://github.com/Kiln-AI/kiln"

[tool.poetry.dependencies]
python = ">=3.9"
kilnai = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
